--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 $white: #ffffff;
 $black: #000000;
 $btnBlack: #151615;
-$primary: #63f74f;
+$primary: #F4c430;
 
 @mixin main-font {
   font-family: "Poppins", sans-serif;
