--- a/css/style.scss
+++ b/css/style.scss
@@ -86,7 +86,7 @@ body {
 
 .hero_area {
   height: 100vh;
-  background-image: url(../images/hero-bg.jpg);
+  background-image: url(../images/Hero_5.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -460,7 +460,7 @@ a:focus {
       a {
         @include hero_btn($black, $white, 8px, 35px, 35px);
         margin: 35px auto 0 auto;
-        box-shadow: 0 0 35px 0 rgba($color: #63f74f, $alpha: .7);
+        box-shadow: 0 0 35px 0 rgba($color: #F4c430, $alpha: .7);
       }
     }
   }
