--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(transparent), to(#63f74f));
+  background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(transparent), to(#F4c430));
   background: linear-gradient(to bottom, transparent, transparent, #63f74f);
 }
 
