--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body {
   width: 100%;
   height: 100%;
   background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(transparent), to(#F4c430));
-  background: linear-gradient(to bottom, transparent, transparent, #63f74f);
+  background: linear-gradient(to bottom, transparent, transparent, #F4c430);
 }
 
 .sub_page .hero_area {
@@ -277,7 +277,7 @@ a:focus {
 }
 
 .slider_section .slider_heading h2 span {
-  color: #63f74f;
+  color: #F4c430;
 }
 
 .slider_section .detail-box h1 {
@@ -427,7 +427,7 @@ a:focus {
   border: none;
   width: 1px;
   height: 200px;
-  background-color: #63f74f;
+  background-color: #F4c430;
   margin: 2rem 0;
 }
 
