--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@ a:focus {
 
 .about_section .about_container {
   padding: 45px;
-  background-image: url(../images/about-bg.jpg);
+  background-image: url(../images/team_2.jpg);
   background-size: cover;
 }
 
